[metadata]
name = seamicro-ml2
version = 2015.1
summary = OpenStack Networking
description-file =
    README.rst
author = AMD
author-email = harshada.kakad@izeltech.com
home-page = https://github.com/seamicro/seamicro-ml2
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    seamicro_ml2
data_files =
    etc/neutron =
        etc/neutron/plugins/ml2/ml2_conf_seamicro.ini

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
neutron.ml2.mechanism_drivers =
    seamicro = neutron.plugins.ml2.drivers.seamicro.driver:SeaMicroMechanismDriver

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = seamicro_ml2/locale/seamicro-ml2.pot

[compile_catalog]
directory = seamicro_ml2/locale
domain = seamicro-ml2

[update_catalog]
domain = seamicro-ml2
output_dir = seamicro_ml2/locale
input_file = seamicro_ml2/locale/seamicro-ml2.pot

[wheel]
universal = 1
